--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -71,7 +71,7 @@ jobs:
           DB_PASSWORD: root
 
       - name: Executar testes
-        run: php artisan test
+        run: vendor/bin/phpunit
         env:
           DB_CONNECTION: mysql
           DB_HOST: 127.0.0.1
@@ -79,6 +79,7 @@ jobs:
           DB_DATABASE: pizzaria_do_cuca
           DB_USERNAME: pizzaria_user
           DB_PASSWORD: root
+          APP_ENV: testing
 
   docker:
     runs-on: ubuntu-latest
